syntax = "proto3";

option java_multiple_files = true;
option java_package ="com.roopy.proto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  // Unary(requet: 1, response: 1)
  rpc sayHelloUnary(HelloRequest) returns (HelloResponse);

  // Bidirectional(request: n, response: n)
  rpc sayHelloBidirectional(stream HelloRequest) returns (stream HelloResponse);
}